--- a/imageselector/src/App.css
+++ b/imageselector/src/App.css
@@ -16,11 +16,13 @@ body {
 
 img.image-content {
     height: 500px;
-    border: 1px solid;
+    border: 1px solid grey;
+    border-radius: 4px;
 }
 
 .img-container {
-    text-align: center
+    text-align: center;
+    cursor: pointer;
 }
 .app-content {
     height: 100vh;
